<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="invisible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/food_search"
                    app:endIconContentDescription="Search"
                    app:endIconDrawable="@drawable/baseline_search_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/md_theme_light_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionSearch"
                        android:inputType="textShortMessage" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_et_search">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="480dp"
                        android:layout_margin="8dp" />
                </com.google.android.material.card.MaterialCardView>

                <ProgressBar
                    android:id="@+id/paginationProgressBarTop"
                    style="?attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@android:color/transparent"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/card_recycler_view"
                    app:layout_constraintStart_toStartOf="@+id/card_recycler_view"
                    app:layout_constraintTop_toTopOf="@+id/card_recycler_view" />

                <ProgressBar
                    android:id="@+id/paginationProgressBarBottom"
                    style="?attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@android:color/transparent"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/card_recycler_view"
                    app:layout_constraintEnd_toEndOf="@+id/card_recycler_view"
                    app:layout_constraintStart_toStartOf="@+id/card_recycler_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>