...
                        app:navigationIcon="@drawable/outline_menu_24"
                        app:navigationIconTint="@color/md_theme_light_onPrimary"
                        app:title="@string/meals"
                        app:titleTextAppearance="@style/TextAppearance.OwnTrainer.ActionBar.Title" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/layout_tab"
                        style="@style/Widget.OwnTrainer.TabLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
...
