...
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconContentDescription="Quantity"
                    app:startIconDrawable="@drawable/ic_baseline_shopping_bag_24"
                    app:suffixText="@string/g">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:foreground="?android:attr/selectableItemBackground"
...

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                style="@style/Widget.OwnTrainer.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/network_food_item_top_app_bar"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:navigationIconTint="@color/md_theme_light_onPrimary"
...
