<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_add_to_meal"
        android:contentDescription="@string/add_to_meal"
        android:title="@string/add"
        app:showAsAction="always" />

</menu>